Commit automatic update to radeonhd.man from rhd_id.c
This update was found using experimental code which updates
the man page from the rhd_id.c RHDIdentify() output.

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -77,7 +77,7 @@ Radeon HD 2900 GT/Pro/XT; FireGL V7600/V8600/V8650
 Radeon HD 2350, HD 2400 Pro/XT, HD 2400 Pro AGP; FireGL V4000
 .TP 8
 .B RV630
-Radeon HD 2600 Pro/XT, HD 2600 Pro/XT AGP; Gemini RV630; FireGL V3600/V5600
+Radeon HD 2600 LE/Pro/XT, HD 2600 Pro/XT AGP; Gemini RV630; FireGL V3600/V5600
 .TP 8
 .B M52
 Mobility Radeon X1300
