man: Add link to bugzilla

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -183,6 +183,11 @@ The radeonhd wiki (home) page
 .RS 4
 \%http://wiki.x.org/wiki/radeonhd
 .RE
+.IP " 4." 4
+Query the bugtracker for radeonhd bugs
+.RS 4
+\%https://bugs.freedesktop.org/query.cgi?product=xorg&component=Driver/radeonhd
+.RE
 .\"
 .\"
 .SH AUTHORS
