--- a/README
+++ b/README
@@ -1,15 +1,25 @@
-Driver for AMD GPG r5xx/r6xx Chipsets
-=======================================================================
+radeonhd - the X.org X11 driver for AMD GPG r5xx/r6xx chipsets
+==============================================================
 
 radeonhd is the X.org X11 driver for AMD GPG (ATI) r5xx/r6xx chipsets.
+Main development is driven by Novell at the time of writing, in close
+relationship to AMD which provides free documentation for the chipsets.
 
 More detailed notes about
   * supported chipsets
-  * how to configure radeonhd
-  * known radeonhd bugs
-etc. are available in the included radeonhd(4) man page.
+  * radeonhd driver options
+  * troubleshooting
+are available in the included radeonhd(4) man page.
+
+Further information about
+  * known radeonhd bugs & limitations
+  * frequently asked questions (FAQ)
+  * how to configure RandR
+  * configuration examples
+is available on the wiki at http://wiki.x.org/wiki/radeonhd
 
 This README file contains the following sections:
+  * Recent changes
   * More Resources
   * Installation
   * Common problems during builds
@@ -18,9 +28,29 @@ This README file contains the following sections:
 
 
 
+Recent Changes
+==============
+
+- Version 1.0.0
+
+  - First released version.
+  - Full modesetting driver, capable of driving multiple monitors.
+  - Support for VGA, DVI, DMS-59, and laptop panels.
+  - Support for monitor hotplug detection, DDC, and dynamic reconfiguration.
+  - Full RandR 1.2 compatibility.
+  - AtomBIOS support for initialization, data tables, etc.
+  - Early RandR 1.3 property support (subject to change).
+  - Hardware cursor support.
+  - No 2D & 3D acceleration, no XVideo yet. No TV, Component, and HDMI yet.
+
+
+
 More Resources
 ==============
 
+The official radeonhd wiki:
+   http://wiki.x.org/wiki/radeonhd
+   
 The mailing list on radeonhd:
    http://lists.opensuse.org/radeonhd/
 
@@ -57,8 +87,7 @@ This uses imake and is for compatibility with older systems.
 To avoid building in your source tree, do:
 
    $ mkdir _b && cd _b
-   $ autogen -vis ..
-   $ ../configure --enable-maintainer-mode
+   $ ../autogen.sh
    $ make
    $ make install
 
@@ -68,7 +97,7 @@ source files.
 
 Hint: If you happen to have multiple branches in your git source tree, you
       can have per-branch _b-BRANCH/ build trees and _i-BRANCH/ install
-      trees. ("... configure ... --prefix=$PWD/_i-BRANCH")
+      trees. ("... configure/autogen.sh ... --prefix=$PWD/_i-BRANCH")
 
 Note that none of these methods will install the rhd_conntest tool. The
 "xmkmf" method always requires a separate "make" run in utils/conntest. The
@@ -105,21 +134,27 @@ something similar.
 Getting and updating the radeonhd source code
 =============================================
 
-radeonhd is maintained in the git repository found at
+Released radeonhd tarballs can be downloaded from
+
+   ftp://ftp.freedesktop.org/pub/individual/driver/
+
+The name of the tarball will be xf86-video-radeonhd-<version>.tar.bz2
+
+
+The developer version of radeonhd is maintained in the git repository found at
 
    git://anongit.freedesktop.org/git/xorg/driver/xf86-video-radeonhd
 
 You can find information on using git at the git website http://git.or.cz/
 and a short intro at
+
    http://www.freedesktop.org/wiki/Infrastructure/git/Developers
 
 You can get a copy of the repository like this:
 
    $ git clone git://anongit.freedesktop.org/git/xorg/driver/xf86-video-radeonhd
-   $ git clone git://anongit.freedesktop.org/git/xorg/driver/xf86-video-radeonhd my-radeonhd
 
-This will create a directory xf86-video-radeonhd in the current directory
-by default, or the given directoy my-radeonhd otherwise.
+This will create a directory xf86-video-radeonhd in the current directory.
 
 If you have not made any local changes and want to update you source code
 with the newest stuff from the official radeonhd repository, you can run this:
@@ -127,12 +162,13 @@ with the newest stuff from the official radeonhd repository, you can run this:
    $ git pull
 
 If you HAVE made local changes and committed them locally to your master
-branch, you will be better off running
+branch (with "git commit -a"), you will be better off running
 
-   $ git fetch -v
+   $ git fetch
    $ git rebase origin
 
-If you're using more branches, read the git docs.
+If you're using more branches, or run into a conflict during rebasing, read
+the git docs.
 
 
 
@@ -144,10 +180,10 @@ You can easily create patches to send to the developers using git.
    $ vi some_file.c
    $ git status
    $ git diff
-   $ git add some_file.c
-   $ git commit
+   $ git commit -a
 
    $ git format-patches origin
 
 Then you can sift through the 0*.patch files and choose a few to send to
 the radeonhd mailing list.
+
