--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -262,6 +262,150 @@ Thus the default is
 (i.e. ignore).
 .\"
 .\"
+.SH RANDR OUTPUT PROPERTIES
+The following properties can be queried with
+.B xrandr --prop
+and some of them can be set with
+.BR "xrandr --output" " <output> " --set " <property> <value> ."
+Those marked with RR13 are probably merged into a RandR 1.3 standard.
+Properties marked Read-Only are provided by the driver for informational
+purpose only, those marked Static won't change during runtime.
+.TP
+.BR RANDR_SIGNAL_FORMAT "   Read-Only RR13"
+.RS
+.TP 16
+.PD 0
+.IR Type :
+string
+.TP
+.IR Range/List :
+unknown VGA TMDS LVDS FBAS FBAS-PAL FBAS-NTSC FBAS-SECAM SVideo YPbPr
+DisplayPort
+.RE
+.RS
+.PD
+.PP
+Signal format / physical protocol format that is used for the specified
+output.
+.br
+A driver MAY change this property of an output if the underlying hardware
+indicates a protocol change (e.g. TV formats).  Values with dashes
+.RI ( FBAS-PAL )
+describe more specific versions of the base values
+.RI ( FBAS )
+and SHOULD be used if known to the driver.
+.RE
+.TP
+.BR RANDR_CONNECTOR_TYPE "   Read-Only Static RR13"
+.RS
+.TP 16
+.PD 0
+.IR Type :
+string
+.TP
+.IR Range/List :
+unknown VGA DVI DVI-I DVI-A DVI-D HDMI PANEL TV TV-FBAS TV-SVideo TV-YPbPr
+TV-SCART TV-C4 DisplayPort
+.RE
+.RS
+.PD
+.PP
+Connector type, as far as known to the driver.
+.br
+Values with dashes
+.RI ( TV-FBAS )
+describe more specific versions of the base values
+.RI ( TV ).
+The former SHOULD be used if the connector is not capable of producing other
+signal formats. The later SHOULD be used if the exact connector is unknown, or
+the connector is a multi-format connector that is not described otherwise.
+.IR DVI ,
+for instance, SHOULD be handled like a
+.I DVI-I
+connector, unless additional information is available to the user agent.
+.I PANEL
+describes laptop-internal (normally LVDS) displays.
+.IR TV ,
+.IR TV-SCART ,
+.IR TV-YPbPr ,
+and
+.I TV-C4
+with signal format
+.I VGA
+are valid combinations and describe RGB TV signals.
+.RE
+.TP
+.BR RANDR_CONNECTOR_NUMBER "   Read-Only Static RR13"
+.RS
+.TP 16
+.PD 0
+.IR Type :
+int32
+.TP
+.IR Range/List :
+0-
+.RE
+.RS
+.PD
+.PP
+Outputs that route their signal to the same connector MUST have the same
+connector number. Outputs with the same connector number MUST route their
+signal to the same connector, except if it is 0, which indicates unknown
+connectivity. 1 is called the primary connector, 2 the secondary. 3 is often a
+TV connector, but that is completely driver / hardware dependent.
+.br
+Outputs with the same connector number SHOULD have the same connector type.
+Meaning and client behavior for mismatching connector types is undefined at
+the moment.
+.RE
+.TP
+.BR RANDR_OUTPUT_NUMBER "   Read-Only Static RR13"
+.RS
+.TP 16
+.PD 0
+.IR Type :
+int32
+.TP
+.IR Range/List :
+0-
+.RE
+.RS
+.PD
+.PP
+A card may route one internal output to several connectors.  Connectors that
+are driven by the same output cannot be driven by different Crtcs and are thus
+only allowed to be used in clone mode. The driver SHOULD emit an error message
+and continue as gracefully as possible if using different Crtcs for the same
+internal output is requested.
+.br
+Internal outputs are numbered from 1, 0 indicates that output routing is
+unknown.
+.RE
+.TP
+.B RANDR_PANING_AREA
+.RS
+.TP 16
+.PD 0
+.IR Type :
+string
+.TP
+.IR Format :
+.RB <width> x <height>[ + <xoffset> + <yoffset>]
+.RE
+.RS
+.PD
+.PP
+Specifies the panning area in RandR mode per output.
+.br
+It actually is a Crtc-specific property, but RandR doesn't support that yet.
+As the
+.B xrandr
+application typically always resets the framebuffer size with every action,
+.BR --fb " <width>" x <height>
+has to be added on every invocation, unless there is an additional output
+configured that is using this size as its resolution.
+.\"
+.\"
 .SH KNOWN BUGS
 As the
 .B radeonhd
