Add I2C data dump code.
This code scans all i2c buses it can find and dumps n bytes of data
starting at offset 0.

--- a/utils/conntest/README
+++ b/utils/conntest/README
@@ -16,12 +16,16 @@ Usage:
 ------
 
 As root run:
-./rhd_conntest <pci tag> [-s]
+./rhd_conntest <pci tag> [-d] [-s] [-x num]
 
 <pci tag> is in the form <bus>:<device>.<function>, the most common position
 is 1:0.0. lspci happily provides you with this information.
+
 The optional option -s will scan the known I2C for additional slaves (besides
 the DDC slave on 0xA0). Depending on your hardware this may take long.
+
+The optional argument -x <num> will dump <num> bytes of data from the
+available DDC slaves. <num> must not be higher than 256.
 
 To dump the content of the VBIOS run:
 ./rhd_conntest <pci tag> -d
