--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -163,19 +163,18 @@ Enable or disable the software cursor. The hardware cursor is inactive
 when the software cursor is enabled. The default is
 .BR off .
 .TP
-.BI "Option \*qNoAccel\*q
-Disable all hardware accleration. The default is to
-.B enable
-hardware acceleration.
+.BI "Option \*qAccelMethod\*q \*q" none|default|shadowfb|xaa|exa \*q
+Use the indicated accleration method. The
+.B default
+is depending on chipset version and state of acceleration techniques and
+tries to give the best user experience.
+.B shadowfb
+is a software-only acceleration technique, while
+.B xaa
+and
+.B exa
+are hardware-based acceleration techniques.
 .br
-.B Acceleration is not implemented yet, so this option is ignored
-.B for the moment.
-.TP
-.BI "Option \*qShadowFB\*q \*q" boolean \*q
-Enable or disable shadow framebuffer support. This greatly improves the
-speed of unaccelerated drivers. The default is
-.B on
-as long as acceleration is not supported.
 .TP
 .BI "Option \*qNoRandr\*q
 Disable RandR 1.2 support. This turns the driver back to use standard
@@ -218,21 +217,12 @@ The default is
 .BR Auto .
 .RE
 .TP
-.BI "Option \*qRRUseXF86Edid\*q \*q" boolean \*q
-.IR "RandR modesetting only" .
-.br
-Enable or disable the use of xf86OutputGetEDID() and xf86OutputGetEDIDModes()
-instead of the default routines from
-.BR radeonhd ,
-which are better adapted to the chipset. Panels will often fail to work with
-these calls. The default is
-.BR off .
-.PP
-.RS
-.B NOTE:
-Use of this option is considered deprecated. Report to the mailing list
-if this is needed for your configuration.
-.RE
+.BI "Option \*qOffscreenSize\*q \*q" <integer>M|<integer>% \*q
+Specify the amount of framebuffer memory used for offscreen pixmaps, in
+megabytes or percent of available memory. This amount of memory is not
+available for DRI. Certain hardware and software limits apply. The default
+is
+.BR 10% .
 .TP
 .BI "Option \*qRROutputOrder\*q \*q" "list-of-outputs" \*q
 .IR "RandR modesetting only" .
@@ -265,6 +255,41 @@ to what most drivers behave like and a common source of configuration problems.
 Thus the default is
 .B off
 (i.e. ignore).
+.TP
+.BI "Option \*qNoAccel\*q
+Disable all hardware acceleration. The default is to
+.B enable
+hardware acceleration.
+.br
+.B NOTE:
+Use of this option is considered deprecated. The
+.B AccelMethod
+option is considered to be more flexible.
+.TP
+.BI "Option \*qShadowFB\*q \*q" boolean \*q
+Enable or disable shadow framebuffer support. This greatly improves the
+speed of unaccelerated drivers. The default depends on chipset and
+acceleration state.
+.br
+.B NOTE:
+Use of this option is considered deprecated. The
+.B AccelMethod
+option is considered to be more flexible.
+.TP
+.BI "Option \*qRRUseXF86Edid\*q \*q" boolean \*q
+.IR "RandR modesetting only" .
+.br
+Enable or disable the use of xf86OutputGetEDID() and xf86OutputGetEDIDModes()
+instead of the default routines from
+.BR radeonhd ,
+which are better adapted to the chipset. Panels will often fail to work with
+these calls. The default is
+.BR off .
+.br
+.B NOTE:
+Use of this option is considered deprecated. Report to the mailing list
+if this is needed for your configuration.
+.RE
 .\"
 .\"
 .SH RANDR OUTPUT PROPERTIES
