--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -60,6 +60,7 @@ The
 driver supports video cards based on the following ATI chips:
 .\" The following list was generated from "X -logverbose 7" by the following command:
 .\" sed -n '/^\t[RM][A-Z0-9]\+ * : /{ s/\.$//; s/^\t\([A-Z0-9]\+\) \+: \(.*\)/.TP 8\n.B \1\n\2/; p};' /var/log/Xorg.0.log
+.\" TODO: Note that this line doesn't deal with multi-line output correctly
 .\" The list replicates the output of RHDIdentify() in src/rhd_id.c.
 .PP
 .PD 0
@@ -100,11 +101,20 @@ Radeon HD 2900 GT/Pro/XT; FireGL V7600/V8600/V8650
 .B RV610
 Radeon HD 2350, HD 2400 Pro/XT, HD 2400 Pro AGP; FireGL V4000
 .TP 8
+.B RV620
+Radeon HD 3450, HD 3470
+.TP 8
 .B RV630
 Radeon HD 2600 LE/Pro/XT, HD 2600 Pro/XT AGP; Gemini RV630; FireGL V3600/V5600
 .TP 8
+.B RV635
+Radeon HD 3650, HD 3670
+.TP 8
 .B RV670
 Radeon HD 3850, HD 3870, FireGL V7700
+.TP 8
+.B R680
+Radeon HD 3870 X2
 .TP 8
 .B M52
 Mobility Radeon X1300
@@ -141,6 +151,12 @@ Mobility Radeon HD 2400 XT
 .TP 8
 .B M76
 Mobility Radeon HD 2600; (Gemini ATI) Mobility Radeon HD 2600 XT
+.TP 8
+.B M82
+Mobility Radeon HD 3400
+.TP 8
+.B M86
+Mobility Radeon HD 3600
 .TP 8
 .B RS600
 Radeon Xpress 1200, Xpress 1250
