--- a/README
+++ b/README
@@ -33,6 +33,20 @@ Major Changes
 
 Read ChangeLog for a complete list.
 
+- Version 1.2.0
+
+  - Added support for RV620, RV635, and R680.
+  - Added 2D acceleration for R5xx (including RS6xx), both XAA and EXA.
+  - Added support for DDIA block (second digital output) on RS690.
+  - Added support for interlaced modes
+  - Added additional layers for splitting outputs into encoders and
+    transmitters as needed for new hardware.
+  - Added support for DragonFly BSD.
+  - Improved RandR corner cases.
+  - Improved handling of secondary cards.
+  - Implemented foundation work for future TV support.
+  - Huge number of bugfixes and minor updates.
+
 - Version 1.1.0
 
   - Added Support for RS600, preliminary RV670.
