Add XORG_* macro names to docs for easy grepping
Add XORG_MANPAGE_SECTIONS or XORG_RELEASE_VERSION to README section
on missing m4 macros for easy doc grepping.

--- a/README
+++ b/README
@@ -151,6 +151,9 @@ Problem:
 |autoreconf: /usr/bin/autoconf failed with exit status: 1
 `----
 
+The same error can happen with missing macro definitions for
+XORG_MANPAGE_SECTIONS or XORG_RELEASE_VERSION.
+
 Solution:
 ---------
 
