--- a/README
+++ b/README
@@ -161,6 +161,8 @@ Make sure you have all required X.org development packages installed. These
 may be called xorg-dev, xorg-x11-server-sdk and xorg-x11-util-macros, or
 something similar.
 
+If you're on a FreeBSD system, you probably need to install the 
+devel/xorg-macros port/package. 
 
 
 Getting and updating the radeonhd source code
