--- a/README
+++ b/README
@@ -161,11 +161,11 @@ Your system lacks one or more of these files in /usr/share/aclocal:
     xorg-macros.m4 xorg-server.m4 xorgversion.m4
 
 Make sure you have all required X.org development packages installed. These
-may be called xorg-dev, xorg-x11-server-sdk and xorg-x11-util-macros, or
-something similar.
+may be called xorg-dev, xorg-x11-server-sdk and xorg-x11-util-macros,
+xorg-build-macros, xutils-dev, xorg-util-macros, or something similar.
 
-If you're on a FreeBSD system, you probably need to install the 
-devel/xorg-macros port/package. 
+If you're on a FreeBSD system, you probably need to install the
+devel/xorg-macros port/package.
 
 
 Getting and updating the radeonhd source code
